# KORAL

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md
cmake/: koral-config.cmake.in
include/koral/: CLATCH.h  CUDAK2NN.h  CUDALERP.h  Detector.h  FeatureAngle.h  KFAST.h  KORAL.h  Keypoint.h  Matcher.h
src/: CLATCH.cu  CUDAK2NN.cu  CUDALERP.cu  FeatureAngle.cpp  KFAST.cpp
test/: CMakeLists.txt
test/src/: main.cpp
